
2006-06-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug# 3397: FORM submit as image is not valid xhtml
	* Fixed restriction to languages in Frontend editing
	* Fix bugs #3212 & #1178: empty page is displayed when accessing Web>Versioning

2006-06-28 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix bug #3162: Cropscale fails, if one dimension has already the right size (thanks to Stefan Geith)

2006-06-28 Karsten Dambekalns <karsten@typo3.org>

	* t3lib_extfilefunc: func_upload() now logs if no file was uploaded.
	* t3lib_tcemain: Made SQL query in versionizeRecord() conform to DBAL (use OR instead of ||).
	* t3lib_userauthgroup, tx_sv_auth: Made FE group lookups possible when lockToDomain is NULL in DB (e.g. when using Oracle).
	* t3lib/stddb/tables.sql: Changed be_users.lang to VARCHAR instead of CHAR, as MySQL changes it anyway.
	* t3lib_install: Changed an eregi() to a matching preg_match()

2006-06-27 Karsten Dambekalns <karsten@typo3.org>

	* typo3/init.php: Fixed bug #2871.
	* t3lib/class.t3lib_befunc.php: Fixed bug #3106, Documentation of function storeHash differs between class befunc and class page
	* class.tx_install.php: Code cleanup, removed some commented code and cleaned indentation

2006-06-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Created exclusiveKeys for the TCA field configuration of type "select" [fix from 2006-03-19 was lost, see below]

2006-06-20  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #2839: Missing icons for copy mode and thumnails in clipboard (Web>List)

2006-06-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bug #3505: BE multi-language flexforms do not work (t3lib_tceforms)

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Template tools (Web>Template) had hard-coded background colours
	* Made Web > Template > Info skinnable

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>
